# filesystem-rs

./: Cargo.toml  Dockerfile  README.md
src/: args.rs  filesystem.rs  graph.rs  lib.rs  main.rs  termprint.rs
wheelhouse/: bdc_utils-0.1.0-cp38-abi3-macosx_11_0_arm64.whl  filesystem-0.1.0-py3-none-manylinux_2_28_aarch64.whl  filesystem_rs-0.1.0-cp38-abi3-manylinux_2_28_aarch64.whl
